--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,4 +1,5 @@
 .Projects-List {
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -48,7 +49,7 @@
 }
 
 .content-parallax {
-    transform: translateZ(100px);
+    transform: translateZ(100px); 
     display: flex;
     justify-content: space-between;
     gap: 60px;
